<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home_header"/>

    <item
        android:id="@+id/categoryFragment"
        android:enabled="true"
        android:icon="@drawable/category_icon"
        android:title="@string/category_header"/>

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/favorite_icon"
        android:title="@string/favorite_header"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_header"/>


</menu>