<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".auth.login.presentation.ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/loggin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:layout_marginEnd="10dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/email"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/teal_700"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|top"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/noAccount"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/primary_color"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>