<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".auth.signUp.presentation.ui.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/loggin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFName_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/person"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFName_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLastName_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/person"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLastName_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/email"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPass_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPass_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfirmPass_signUp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/primary_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editConfirmPassword_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_haveAcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/haveAccount"
            android:textColor="@color/primary_color"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>