<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/shippingInfo_imageButton_map_address"
        android:layout_width="42dp"
        android:layout_height="44dp"
        android:background="@drawable/location"
        android:scaleType="center"
        android:src="@drawable/location"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="395dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="33dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/acme"
        android:text="@string/shipping_address"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="202dp"
        android:layout_height="41dp"
        android:fontFamily="@font/acme"
        android:text="@string/shipping_info"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="202dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/acme"
        android:text="@string/mobile_number"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/shippingInfo_editText_address" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="33dp" />

    <EditText
        android:id="@+id/shippingInfo_editText_address"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:ems="10"
        android:hint="@string/enter_your_address"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/shippingInfo_editText_phone"
        android:layout_width="242dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:ems="10"
        android:hint="@string/enter_your_phone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shippingInfo_button_continuePayment"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/acme"
        android:text="Continue Payment"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/Widget.Material3.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/save_information_for_every_time"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/shippingInfo_editText_phone"
        app:layout_constraintStart_toStartOf="@+id/shippingInfo_editText_phone"
        app:layout_constraintTop_toBottomOf="@+id/shippingInfo_editText_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>